_generated-config/2.7/config/quarkus-micrometer-config-micrometer-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-micrometer-config-micrometer-config_configuration]]link:#quarkus-micrometer-config-micrometer-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.enabled[quarkus.micrometer.enabled]`

[.description]
--
Micrometer metrics support. 
 Micrometer metrics support is enabled by default.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.registry-enabled-default]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.registry-enabled-default[quarkus.micrometer.registry-enabled-default]`

[.description]
--
Micrometer MeterRegistry discovery. 
 Micrometer MeterRegistry implementations discovered on the classpath will be enabled automatically by default.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder-enabled-default]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder-enabled-default[quarkus.micrometer.binder-enabled-default]`

[.description]
--
Micrometer MeterBinder discovery. 
 Micrometer MeterBinder implementations discovered on the classpath will be enabled automatically by default.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.http-client.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.http-client.enabled[quarkus.micrometer.binder.http-client.enabled]`

[.description]
--
Outbound HTTP request metrics support. 
 Support for HTTP client metrics will be enabled if Micrometer support is enabled, the REST client feature is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.http-server.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.http-server.enabled[quarkus.micrometer.binder.http-server.enabled]`

[.description]
--
Inbound HTTP metrics support. 
 Support for HTTP server metrics will be enabled if Micrometer support is enabled, an extension serving HTTP traffic is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.jvm]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.jvm[quarkus.micrometer.binder.jvm]`

[.description]
--
Micrometer JVM metrics support. 
 Support for JVM metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.kafka.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.kafka.enabled[quarkus.micrometer.binder.kafka.enabled]`

[.description]
--
Kafka metrics support. 
 Support for Kafka metrics will be enabled if Micrometer support is enabled, the Kafka Consumer or Producer interface is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.grpc-server.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.grpc-server.enabled[quarkus.micrometer.binder.grpc-server.enabled]`

[.description]
--
gRPC Server metrics support. 
 Support for gRPC server metrics will be enabled if Micrometer support is enabled, the gRPC server interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.grpc-client.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.grpc-client.enabled[quarkus.micrometer.binder.grpc-client.enabled]`

[.description]
--
gRPC Client metrics support. 
 Support for gRPC client metrics will be enabled if Micrometer support is enabled, the gRPC client interfaces are on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.mp-metrics.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.mp-metrics.enabled[quarkus.micrometer.binder.mp-metrics.enabled]`

[.description]
--
Eclipse MicroProfile Metrics support.

Support for MicroProfile Metrics will be enabled if Micrometer
support is enabled and the MicroProfile Metrics dependency is present:

[source,xml]
----
<dependency>
  <groupId>org.eclipse.microprofile.metrics</groupId>
  <artifactId>microprofile-metrics-api</artifactId>
</dependency>
----

The Micrometer extension currently provides a compatibility layer that supports the MP Metrics API,
but metric names and recorded values will be different.
Note that the MP Metrics compatibility layer will move to a different extension in the future.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.system]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.system[quarkus.micrometer.binder.system]`

[.description]
--
Micrometer System metrics support. 
 Support for System metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.vertx.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.binder.vertx.enabled[quarkus.micrometer.binder.vertx.enabled]`

[.description]
--
Vert.x metrics support. 
 Support for Vert.x metrics will be enabled if Micrometer support is enabled, Vert.x MetricsOptions is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.binder-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.json.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.json.enabled[quarkus.micrometer.export.json.enabled]`

[.description]
--
Support for export to JSON format. Off by default.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.json.path]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.json.path[quarkus.micrometer.export.json.path]`

[.description]
--
The path for the JSON metrics endpoint. The default value is `metrics`.
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.json.buffer-length]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.json.buffer-length[quarkus.micrometer.export.json.buffer-length]`

[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after the expiry, with this buffer length.
--|int 
|`3`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.json.expiry]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.json.expiry[quarkus.micrometer.export.json.expiry]`

[.description]
--
Statistics like max, percentiles, and histogram counts decay over time to give greater weight to recent samples. Samples are accumulated to such statistics in ring buffers which rotate after this expiry, with a particular buffer length.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`P3D`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.prometheus.enabled]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.prometheus.enabled[quarkus.micrometer.export.prometheus.enabled]`

[.description]
--
Support for export to Prometheus. 
 Support for Prometheus will be enabled if Micrometer support is enabled, the PrometheusMeterRegistry is on the classpath and either this value is true, or this value is unset and `quarkus.micrometer.registry-enabled-default` is true.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.prometheus.path]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.prometheus.path[quarkus.micrometer.export.prometheus.path]`

[.description]
--
The path for the prometheus metrics endpoint (produces text/plain). The default value is
`metrics` and is resolved relative to the non-application endpoint (`q`), e.g.
`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}/metrics`.
If an absolute path is specified (`/metrics`), the prometheus endpoint will be served
from the configured path.
--|string 
|`metrics`


a|icon:lock[title=Fixed at build time] [[quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.prometheus.default-registry]]`link:#quarkus-micrometer-config-micrometer-config_quarkus.micrometer.export.prometheus.default-registry[quarkus.micrometer.export.prometheus.default-registry]`

[.description]
--
By default, this extension will create a Prometheus MeterRegistry instance. 
 Use this attribute to veto the creation of the default Prometheus MeterRegistry.
--|boolean 
|`true`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
